--- a/styles.css
+++ b/styles.css
@@ -55,3 +55,15 @@ color: white;
 height: 3rem;
 font-weight: bold;
 }
+
+@media screen and (max-width: 700px) {
+  
+  #survey-form {
+background-color: cyan;
+margin: auto;
+display: flex;
+flex-direction: column;
+padding: 2rem 5rem;
+
+}
+}
