--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,8 @@ margin: auto;
 display: flex;
 flex-direction: column;
 padding: 2rem 5rem;
-width: 70vw;
+width: 80vw;
+ height: auto;
 
 }
 
@@ -66,6 +67,7 @@ display: flex;
 flex-direction: column;
 padding: 2rem 5rem;
 width: 80vw;
+height: auto;
 
 }
 }
